# NekoMusicForPc

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_linux.sh  build_macos_intel.sh  build_old.sh  build_windows.ps1  build_windows.sh  package.json  vite.config.js
.github/workflows/: build-macos.yml  smoke.yml
electron/: main.js  preload.cjs  preload.js
old/: package-lock.json
packaging/: nekomusic_installer.nsi
scripts/: afterPack.cjs
src/: App.vue  main.cpp  version.ts
src/assets/: main.css
src/components/: DesktopLyrics.vue  Layout.vue  MusicList.vue  PlayerBar.vue  Sidebar.vue  UpdateNotification.vue
src/core/: apiclient.cpp  apiclient.h  covercache.cpp  covercache.h  i18n.cpp  i18n.h  musicdownloader.cpp  musicdownloader.h  musicinfo.h  playerengine.cpp  playerengine.h  playlistdb.cpp  playlistdb.h  playlistmanager.cpp  playlistmanager.h  usermanager.cpp  usermanager.h  version.h.in
src/locales/: Nya.js  en-US.js  index.js  zh-CN.js
src/resources/: resources.qrc  style-light.qss  style.qss
src/router/: index.js
src/theme/: theme.h  thememanager.cpp  thememanager.h
src/ui/: addtoplaylistdialog.cpp  addtoplaylistdialog.h  carousel.cpp  carousel.h  desktoplrc.cpp  desktoplrc.h  favoriteplaylists.cpp  favoriteplaylists.h  favoritespage.cpp  favoritespage.h  glasspaint.cpp  glasspaint.h  glasswidget.cpp  glasswidget.h  homepage.cpp  homepage.h  logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h  musiclistpage.cpp  musiclistpage.h  myplaylists.cpp  (+26 more)
tests/: CMakeLists.txt  test_playerengine.cpp
(+15 files in other folders)
